--- a/_units/08.md
+++ b/_units/08.md
@@ -103,21 +103,21 @@ A similar phenomenon is the _subjective contour_. It is difficult not to see tha
 According to the Gestalt psychologists, the brain uses the principles of Gestalt grouping of sensory stimuli to shape objects, especially if the incoming information is incomplete.
 The principles include:
 ## Similarity 
-- elements that are more similar (i.e. share common features) are more likely to be grouped together.
+-- elements that are more similar (i.e. share common features) are more likely to be grouped together.
 We perceive the white dots as one group and the pink dots as another group; this illustrates grouping by similarity of colour.
 {% include img-figure url="/MUTOR/assets/images/unit8_Gestalt_similarity.png" description="" %}
 ## Symmetry
-- symmetrical figures are perceived as being grouped together.
+-- symmetrical figures are perceived as being grouped together.
  The pair of shapes on the left is more likely to be perceived as a group compared to the pair on the right; this is because the left pair is symmetrical around the dotted line whereas the right pair is asymmetrical. 
- {% include img-figure url="/MUTOR/assets/images/unit8_Gestalt_proximity.png" description="" %}
+ {% include img-figure url="/MUTOR/assets/images/unit8_symmetry2.gif" description="" %}
 ## Proximity
 - elements that are close together are more likely to be grouped together.
 The dots that are closer together are perceived as being grouped together.
-{% include img-figure url="/MUTOR/assets/images/unit8_Dalmatian.png" description="" %}
+{% include img-figure url="/MUTOR/assets/images/unit8_Gestalt_proximity.png" description="" %}
 ## Good continuation
 - we tend to perceive figures as being continuous.
  The red diagonal is perceived as one line instead of two, due to the principle of good continuation.
-{% include img-figure url="/MUTOR/assets/images/unit8_Dalmatian.png" description="" %}
+{% include img-figure url="/MUTOR/assets/images/unit8_goodcontinuation.gif" description="" %}
 ## Closure
 - we tend to see complete figures despite missing parts.
 {% include img-figure url="/MUTOR/assets/images/unit8_Gestalt_closure.png" description="" %}
