--- a/_units/08.md
+++ b/_units/08.md
@@ -96,6 +96,7 @@ A similar phenomenon is the _subjective contour_. It is difficult not to see tha
 {% include img-figure url="/MUTOR/assets/images/unit8_Kinazsa_Triangle.png" description="" %}
 
 # Figure-Ground Organization
+Figure-Ground Organization is a Gestalt principle referring to our ability to make out a figure in front of a background. For instance, the [figure–ground vase illusion](https://en.wikipedia.org/wiki/Rubin_vase) arises when the visual information given is ambiguous. In the figure below, a low quality, black and white photo of a dalmatian dog. The viewer first has to use perceptual completion to recognize the outlines of the dog against the background which could be interpreted as an overexposed scene in a park. Once, the viewer has successfully analysed the scene, he or she will identify the dog much more quickly when shown the image again. Bregman has coined the term _auditory scene analysis_ to denote analogous processes in the auditory domain.
 
 {% include img-figure url="/MUTOR/assets/images/unit8_Dalmatian.png" description="" %}
 
@@ -200,20 +201,20 @@ Narmour's I-R model predicts these melodic principles:
 1. Proximity – realized intervals should be no larger than a perfect 4th.
 1. Closure – realized intervals tend to smaller and in the opposite direction than implied intervals.
 
-Schellenberg (1997) has shown via principle component analysis that only two principles are necessary to sufficiently describe listeners' expectations of melodic continuation:
+Schellenberg (1997) showed via principle component analysis that only two principles are necessary to sufficiently describe listeners' expectations of melodic continuation:
 1. Pitch-Proximity - this principle states that when listeners hear an implicative interval in a melody, they expect the  next tone to be proximate in pitch to the second tone of the implicative interval
 1. Pitch-Reversal - this principle claims that listeners often expect the next tone to be proximate in pitch to the tone that preceded the most recently heard tone. In other words, listeners often expect the second tone of a realized interval to be proximate to the first tone of the implicative interval.
 
 {% include img-figure url="/MUTOR/assets/images/unit8_I-R_new.png" description="Quantification of principles of the revised two-factor model of the implication-realization model. Because larger intervals are assigned higher values, negative associations between the principle and expectancy data are expected" %}
 
-#### Gap Fill
-Gap fill was first proposed by Leonard B. Meyer in 1973 (von Hippel & Huron, 1998). The basic principle of gap fill states that large intervals in a melody imply smaller intervals in the opposite direction. Schellenberg demonstrates that gap-fill is the logical outcome when a melody violates the pitch-proximity principle and pitch-reversal is applied.
+#### Gap-Fill
+Gap-fill was first proposed by Leonard B. Meyer in 1973 (von Hippel & Huron, 1998). The basic principle of gap-fill states that large intervals in a melody imply smaller intervals in the opposite direction. Schellenberg demonstrates that gap-fill is the logical outcome when a melody violates the pitch-proximity principle and pitch-reversal is applied.
 
-{% include img-figure url="/MUTOR/assets/images/unit8_gap_fill.gif" description="An illustration of gap fill processes." %}
+{% include img-figure url="/MUTOR/assets/images/unit8_gap_fill.gif" description="An illustration of gap-fill processes." %}
 
-Countless famous musical examples can illustrate the gap fill principle. For instance, the tune of "My Bonnie lies over the ocean" contains a large intervallic leap upwards between "my" and "Bonnie", followed by small steps downwards in "-nie lies over the ocean." 
+Countless famous musical examples can illustrate the gap-fill principle. For instance, the tune of "My Bonnie lies over the ocean" contains a large intervallic leap upwards between "my" and "Bonnie", followed by small steps downwards in "-nie lies over the ocean." 
 
-The idea of gap fill most closely borrows from Gestalt theories in perception, which are a set of theories on how units are perceived as a whole. The Gestalt principles of similarity, proximity, good continuation, symmetry, and closure, originally used in vision, are important also for perceiving melodies as holistic, unified objects.
+The idea of gap-fill most closely borrows from Gestalt theories in perception, which are a set of theories on how units are perceived as a whole. The Gestalt principles of similarity, proximity, good continuation, symmetry, and closure, originally used in vision, are important also for perceiving melodies as holistic, unified objects.
 
 Demonstration from ASA CD: Segregation Of A Melody From Interfering Tones This demo shows the principle of proximity: pitches close together in register tend to be grouped together.
 <html>
