--- a/_units/03.md
+++ b/_units/03.md
@@ -209,11 +209,18 @@ The signal with multiple harmonics sounds louder than the pure tone because our 
 
 The spectral integration that our ear performs is an important feature of the way in which we perceive many orchestral instruments, especially the brass instruments. Figure 3 is a sonogram of a tuba playing an A3 starting moderately loud (mf), getting quieter, and then getting louder. Notice that the fundamental (the lowest line in the sonogram) doesn't change amplitude much, but rather, the change in volume comes from the addition of upper partials.
 
-{% include img-figure url="/MUTOR/assets/images/unit3_tuba-cresc.png" description="tuba spectrum cresc" %}
-Figure 3: A tuba playing A3 going from moderately loud to soft to loud.
- 
-![Tuba Crescendo](/MUTOR/assets/audios/unit3_tuba-cresc.aif?controlsList=nodownload-nofullscreen-noremoteplayback)
-Audio example 1: The tuba from figure 3.
+{% include img-figure url="/MUTOR/assets/images/unit3_tuba-cresc.png" description="A tuba playing A3 going from moderately loud to soft to loud." %} 
+<html>
+  <head>
+    <title>A tuba playing A3 going from moderately loud to soft to loud</title>
+  </head>
+  <body>
+    <audio controls src="/MUTOR/assets/audios/unit3_tuba-cresc.aif">
+      Your browser does not support the audio element.
+    </audio>
+  </body>
+</html>
+Audio example 1: The tuba from figure 3.10.
 
 ## Loudness And Time
 
@@ -227,8 +234,26 @@ If someone very far away screams, most listeners will judge the scream a being l
 
 Listen to the following examples; in the first example, you will hear someone speaking at a normal volume and in the second, you will hear a scream. Although the spoken voice is much quieter than the scream, we are still able to tell that one is louder than the other.
 
-![Example 1](/MUTOR/assets/audios/unit3_larry1.wav?controlsList=nodownload-nofullscreen-noremoteplayback)
-![Example 2](/MUTOR/assets/audios/unit3_Psycho1.wav?controlsList=nodownload-nofullscreen-noremoteplayback)
+<html>
+  <head>
+    <title>Larry</title>
+  </head>
+  <body>
+    <audio controls src="/MUTOR/assets/audios/unit3_larry1.wav">
+      Your browser does not support the audio element.
+    </audio>
+  </body>
+</html>
+<html>
+  <head>
+    <title>Psycho1</title>
+  </head>
+  <body>
+    <audio controls src="unit3_Psycho1.wav">
+      Your browser does not support the audio element.
+    </audio>
+  </body>
+</html>
 
 An interesting experiment was carried out at the Center for New Music and Audio Technologies (CNMAT) at UC Berkeley. Two speakers were set up as in figure 5—one farther away from the listeners than the other. On top of each speaker was a light and a third speaker was hidden from the listeners. The listeners were asked to write down which speaker the sounds came from; although the sounds all came from the hidden speaker, the lights of the other two speakers would turn on giving the listeners the impression that the speaker with the light on had made the sound. In this case, although all of the sounds that the listeners heard were the same and originated from the same source, the listeners were fooled by the visual information they were receiving. This illustrates the strength that the visual system can have over the auditory system in the way that we perceive the world around us.
 
