--- a/_units/03.md
+++ b/_units/03.md
@@ -5,8 +5,8 @@
 ###
 title: Fundamentals of Psychoacoustics
 number: 3
-short_description: short description of the unit
-summary: This unit is concerned with how sounds interact with the world and the influence knowledge and understanding can exert. One important distinction to make is between the Bottom-Up and Top-Down perspectives of perception. Bottom-Up processing gives rise to some signal processing manifested in loudness perception and room acoustics, which, in turn, are also dependent on Top-Down knowledge. Auditory illusions caused by a mismatch between Top-Down and Bottom-Up signals will be discussed as well.
+short_description: This unit is concerned with how sounds interact with the world and the influence knowledge and understanding can exert. One important distinction to make is between the Bottom-Up and Top-Down perspectives of perception. Bottom-Up processing gives rise to some signal processing manifested in loudness perception and room acoustics, which, in turn, are also dependent on Top-Down knowledge. Auditory illusions caused by a mismatch between Top-Down and Bottom-Up signals will be discussed as well.
+summary: In the previous unit, we discussed sound largely in the abstract, whereas here we have seen that the environment and our auditory system both play a large role in our perception and understanding of the sonic world around us. It is not enough to say that a signal has an amplitude of 0.5—as we have seen, this will mean different things depending on the frequency. From the bottom-up, we can say that the signal has an amplitude of 0.5 and that the loudness will vary depending on the frequency due to the fact that our auditory system is more sensitive at certain frequencies than others; from the top-down, our knowledge of the origin of the sound source (what made it, where it comes from, etc.) may influence the way in which we hear the signal. This top-down processing can lead to interesting auditory illusions such as the McGurk effect, the Franssen effect, and the Clifton effect. Finally, the acoustic environment and how much reverberation that environment adds to a sound dramatically alters the way in which perceive sounds.
 authors: 
  - Psyche Loui and John MacCallum
 topics: [Elementary Psychoacoustics, Bottom-Up vs. Top-Down, Loudness, Reverberation, Perceptual Illusions, Precedence Effect, Audio-Visual Interaction]
@@ -267,30 +267,23 @@ An interesting experiment was carried out at the Center for New Music and Audio 
 
 Reverberation (or reverb) is the result of sounds reflecting off of the surfaces of an enclosed space. Imagine that we make a loud noise (by firing a starter's pistol or poping a balloon) in a cathedral or a hall. The first sound that a listener would hear is called the direct sound (figures 1-3).
 
-{% include img-figure url="/MUTOR/assets/images/unit3_roomAcoustics-nosound.png" description="Room Acoustics No Sound" %}
-Figure 1: A listener in a room in which a loud short sound is made.
+{% include img-figure url="/MUTOR/assets/images/unit3_roomAcoustics-nosound.png" description="A listener in a room in which a loud short sound is made." %}
 
-{% include img-figure url="/MUTOR/assets/images/unit3_roomAcoustics-direct.png" description="Room Acoustics Direct Sound" %}
-Figure 2: The first sound to hit the listener is called the direct sound.
+{% include img-figure url="/MUTOR/assets/images/unit3_roomAcoustics-direct.png" description="The first sound to hit the listener is called the direct sound." %}
 
-{% include img-figure url="/MUTOR/assets/images/unit3_reverb-direct-plot.png" description="Reverb Direct Plot" %}
-Figure 3: The direct sound from figure 2.
+{% include img-figure url="/MUTOR/assets/images/unit3_reverb-direct-plot.png" description="The direct sound from figure 2." %}
 
 The direct sound is followed by a number of early reflections that arive at the listener after some delay and loss of energy (figures 4-5). The length of the delay and the amount of energy lost are dependant on the size of the room and the type of material used to make the surfaces (the walls, floor, and ceiling).
 
-{% include img-figure url="/MUTOR/assets/images/unit3_roomAcoustics-1stRef.png" description="Room Acoustics First Reflections" %}
-Figure 4: The early reflections arrive at the listener after a short delay and with some loss of energy.
+{% include img-figure url="/MUTOR/assets/images/unit3_roomAcoustics-1stRef.png" description="The early reflections arrive at the listener after a short delay and with some loss of energy." %}
 
-{% include img-figure url="/MUTOR/assets/images/unit3_reverb-direct-early-plot.png" description="Reverb Direct Early Plot" %}
-Figure 5: The early reflections from figure 4 plotted against time.
+{% include img-figure url="/MUTOR/assets/images/unit3_reverb-direct-early-plot.png" description="The early reflections from figure 4 plotted against time." %}
 
 As these early reflections continue to bounce off the surfaces they begin to pile up and overlap creating reverb (figures 6-7).
 
-{% include img-figure url="/MUTOR/assets/images/unit3_roomAcoustics-reverb.png" description="Room Acoustics Reverb" %}
-Figure 6: Reverb is as the original sound continues to bounce around the room, we perceive reverb.
+{% include img-figure url="/MUTOR/assets/images/unit3_roomAcoustics-reverb.png" description="Reverb is as the original sound continues to bounce around the room, we perceive reverb." %}
 
-{% include img-figure url="/MUTOR/assets/images/unit3_reverb-plot.png" description="Reverb Plot" %}
-Figure 7: The reverb in a room tends to decay exponentially.
+{% include img-figure url="/MUTOR/assets/images/unit3_reverb-plot.png" description="The reverb in a room tends to decay exponentially." %}
 
 [Figures adapted from Howard, D.M., and Angus, J., Acoustics and Psychoacoustics, Focal Press, 1996.]
 
@@ -316,8 +309,7 @@ I=\frac{P}{4\Pi r^2}
 
 where P is the initial power of the signal, r is the distance from the source in meters, and I is the intensity in W/m^2. Notice that the denominator in the above equation is the area of a sphere due to the fact that sound radiates out in all directions in a spherical pattern. As sound continues to propagate away from the source, it diffuses over a larger and larger area (figure 8). Imagine that you are standing one meter away from a sound source and the intensity of the sound when it reaches you is 100 dB. If you move 10 meters away from the source, the sound will be spread over 100 times the area and the resulting intensity will be 1/100 of the original or 80 dB.
 
-unit3_inverse-square-diagram.png
-Figure 8: Sound propagating away from a source diffuses over a larger and larger area.
+{% include img-figure url="/MUTOR/assets/images/unit3_inverse-square-diagram.png" description="Sound propagating away from a source diffuses over a larger and larger area." %}
 
 The later reflections also depend on the absorptive quality of the surfaces they bounce off of and can be calculated by
 
@@ -340,16 +332,40 @@ where RT_60 is the reverb time, V is the volume of the enclosure, A is the sum o
 
 Sound examples 1-3, and figures 9-11 are impulse responses of three different halls and their sonograms. Notice that the reverb of each hall decays in a different way and that different frequency regions decay quicker than others but that in general the low frequencies remain active longer than the high frequencies—this is a typical property of the reverb of most enclosed spaces. Also, note that the early reflections can be heard clearly in the second and third examples.
 
+<html>
+  <head>
+    <title>Larry</title>
+  </head>
+  <body>
+    <audio controls src="/MUTOR/assets/audios/unit3_impulse1.wav">
+      Your browser does not support the audio element.
+    </audio>
+  </body>
+</html>
+<html>
+  <head>
+    <title>Larry</title>
+  </head>
+  <body>
+    <audio controls src="/MUTOR/assets/audios/unit3_impulse2.wav">
+      Your browser does not support the audio element.
+    </audio>
+  </body>
+</html>
+<html>
+  <head>
+    <title>Larry</title>
+  </head>
+  <body>
+    <audio controls src="/MUTOR/assets/audios/unit3_impulse3.wav">
+      Your browser does not support the audio element.
+    </audio>
+  </body>
+</html>
 
-Impulse 1 unit3_impulse1.wav
-Impulse 2 unit3_impulse2.wav
-Impulse 3 unit3_impulse3.wav
-
-unit3_impulse-specgram-decayenv.png
-unit3_impulse2-specgram-decayenv.png
-unit3_impulse3-specgram-decayenv.png
-
-Figures 9-11: The reverb decays of three different rooms.
+{% include img-figure url="/MUTOR/assets/images/unit3_impulse-specgram-decayenv.png" description="The reverb decays of three different rooms." %}
+{% include img-figure url="/MUTOR/assets/images/unit3_impulse2-specgram-decayenv.png" description="The reverb decays of three different rooms." %}
+{% include img-figure url="/MUTOR/assets/images/unit3_impulse3-specgram-decayenv.png" description="The reverb decays of three different rooms." %}
 
 Sound samples taken from:
 http://www.cksde.com/p_6_250.htm
@@ -361,10 +377,29 @@ While Bottom-Up perspectives of perception refer to the stimulus-driven processi
 One example of top-down knowledge is the understanding of a musical allusion - i.e. knowing the source material from which another musical work is quoting. This can often influence how the music is perceived. A famous case of a musical allusion is in the third movement of Mahler's First Symphony.
 
 
-Children's song "Frère Jacques" unit3_frerejacques.mid
+Children's song "Frère Jacques" 
+<html>
+  <head>
+    <title>Larry</title>
+  </head>
+  <body>
+    <audio controls src="/MUTOR/assets/audios/unit3_frerejacques.mid">
+      Your browser does not support the audio element.
+    </audio>
+  </body>
+</html>
 
-The opening measures of Mahler's Symphony No. 1 in D, "Titan" unit3_mahler1.mp3.
-
+The opening measures of Mahler's Symphony No. 1 in D, "Titan".
+<html>
+  <head>
+    <title>Larry</title>
+  </head>
+  <body>
+    <audio controls src="/MUTOR/assets/audios/unit3_mahler1.mp3">
+      Your browser does not support the audio element.
+    </audio>
+  </body>
+</html>
 
 Mahler quoted the melody from the traditional children's song Frère Jacques, but transposed it into the minor mode. An especially eerie and intriguing effect is achieved when the audience recognizes the source of the musical quotation. Thus the perception of the mood of this piece is enhanced by top-down knowledge. 
 
@@ -374,12 +409,12 @@ Another example is the effects of visual information on the perception of musica
 
 Top-Down perspectives influence Bottom-Up processing in many important ways. Compare the heights of the two people in the following picture. 
 
-unit3_topdownillusion.jpg Top Down
+{% include img-figure url="/MUTOR/assets/images/unit3_topdownillusion.jpg" description="Top Down." %}
 
 Although the two persons are identical in actual size, the figure closer to the bottom of the picture is perceived as being smaller than the other person. This is because of top-down inference of the higher person being further away, and our knowledge of linear perspective playing a role in the picture leads us to infer that the further figure is larger. If the background context is removed, the illusion disappears and we perceive both people as of similar size.
 
-unit3_topdownillusion2.jpg Perceptual illusion corrected
-
+{% include img-figure url="/MUTOR/assets/images/unit3_topdownillusion2.jpg" description="Perceptual illusion corrected" %}
+ 
 Perceptual illusions like this one often rely on the unconscious inference of contextual cues, which is based on top-down knowledge of naturalistic scenes.
 
 # Melodic Processes
@@ -388,16 +423,16 @@ The effects of Top-Down processing are not limited to the perception of visual i
 
 Top-Down influences also play important roles in the perception of more complex musical attributes. In his Implication-Realization model, Narmour (1990) laid out various principles of top-down influences on melodic perception, in which our top-down expectations for how melodies tend to sound may influence our experience of melodies. Narmour specifically discusses these top-down expectations in terms of intervals in a melody. Based on the general knowledge of perceptual organization, we tend to expect small intervals in one direction to follow large intervals in the opposite direction. The melodic process of large intervals being followed by smaller intervals in the opposite direction, also known as gap fill, is found in most popular tunes. 
 
-unit3_happybday.jpg happy birthday 
+{% include note author="gh" text="In some papers I-R is described as bottom-up process. This needs to be clarified" %}
 
-A line from the Happy Birthday song, illustrating the principle of gap fill. More on these top-down expectations for melodic processes will be discussed in Unit 7.
+{% include img-figure url="/MUTOR/assets/images/unit3_happybday.jpg" description="happy birthday" %}
+
+A line from the Happy Birthday song, illustrating the principle of gap-fill. More on these top-down expectations for melodic processes will be discussed in Unit 9.
 
 # Precedence Effect
 
 The Precedence Effect, also known as the Haas Effect or the Law of the First Wavefront, states that it is the first acoustic information that arrives at a listener that determines the location of a sound. When the same sound arrives at our ears from many directions, we tend to perceive the first sound wave that reaches us as the source, and the later wavefronts as reverberations, or echoes.
 The precedence effect can be demonstrated using stereo stereo speakers presenting pairs of click sounds. When two clicks are presented from opposite speakers within a very short time of each other, where the first click is called the "lead" and the second is the "lag", we tend to perceive the sound source to be from the "lead". The "lag" is perceived as an echo. If the location of the lead and lag are switched (i.e. the speaker that was playing the later click in the pair, now plays the first click), then the new location is perceived as a sound source. Thus, the first sound to reach the ears is always perceived as the location of the sound source.
-
-unit3_precedence.gif Precedence Effect
 
 (image source: http://www.parmly.luc.edu/parmly/clifton.html)
 Precedence Effect Demonstration (requires stereo headphones) 
@@ -405,30 +440,41 @@ Precedence Effect Demonstration (requires stereo headphones)
 
 The precedence effect may be due to top-down influences on the auditory system. As it is ecologically unlikely for two very similar sound sources to be coming from opposite directions, the second click (the "lag") is perceived not as a new source of sound, but as an echo of the first click (the "lead"). The fact that echoes are not perceived as sound sources is known as echo suppression. 
 
-see also: FranssenEffect, CliftonEffect
+see also: Franssen Effect, Clifton Effect
 
 ## Applications of Precedence Effect
 
 Audio engineers make use of the precedence effect in the design of concert halls. If the speakers are closer to the audience than the performer is, the audience would perceive sound from the loudspeakers rather than from the performer. To ensure that sound is perceived as coming from the performer, audio engineers often implement delay lines between the performer's microphone and the speakers, such that first wavefront reaching the audience comes directly from the performer rather than the speaker. If sounds from the speakers reach the audience after sounds directly from the performer, then the perceived sound would be localized to the performer.
 
-unit3_preceng.jpg  Engineering Applications
 
-## FranssenEffect
+## Franssen Effect
 
 Like the PrecedenceEffect, the FranssenEffect has to do with perceived sound sources. In a two-channel speaker system, if a tone is presented with rapid onset to one speaker, and this tone is ramped off at the same time as when another tone in the opposite speaker is ramped on and sustained, this combination of tones is perceived as just one tone coming from the first speaker (i.e. the speaker that played the onset). The effect is obtained with narrow-band sounds, and only in echoic environments.
 
-franssen.gif Franssen Effect
+{% include img-figure url="/MUTOR/assets/images/unit3_franssen.gif" description="Franssen Effect" %}
 (adapted from Dent, Tollin, & Yin, 2004.)
 
-The FranssenEffect. If a rapid-onset tone is presented at the left speaker and then decays slowly while another tone at the right is presented with slowly increasing amplitude, the percept is of a single stimulus coming from the left.
+The Franssen Effect. If a rapid-onset tone is presented at the left speaker and then decays slowly while another tone at the right is presented with slowly increasing amplitude, the percept is of a single stimulus coming from the left.
 
-## CliftonEffect
+## Clifton Effect
 
-The CliftonEffect is a change to the classical Precedence Demonstration. This change is described in the figure below. Again, pairs of clicks are presented with one slightly preceding the other (the first click is the "source"; the second is the "echo".) Half way into the click train, the source and echo clicks are reversed. That is, halfway through the demonstration the loudspeaker that had delivered the first or source click now delivers the delayed or echo click and vice versa. In the Clifton Effect, an unexpected percept occurrs immediately after the switch, where two clicks are perceived often coming from the location of each loudspeaker. Then after 4 or 5 more click-pair presentations following the switch, a single click is again perceived and its location is now at the loudspeaker presenting the lead click, which is the opposite loudspeaker from that which produced the lead click for the first half of the click train. Most listeners tend to hear two clicks at the beginning of the click train, then fusion occurs, then after the switch two clicks are heard, and then finally fusion reoccurs but at the location of the other loudspeaker. That is, after the switch there is a temporary cessation or breakdown of the Precedence Effect; fusion and/or echo suppression stops. This breakdown occurred because of the prior exposure you had during the first half of the click train. Thus, your experience with the source and echo clicks somehow influenced your perception after the source and echo clicks were switched. Eventually however, echo suppression reoccurs and the Precedence Effect works as before. This demonstration suggests that echo processing might depend on our listening experience in the reflective spaces that we are currently in. 
+The Clifton Effect is a change to the classical Precedence Demonstration. This change is described in the figure below. Again, pairs of clicks are presented with one slightly preceding the other (the first click is the "source"; the second is the "echo".) Half way into the click train, the source and echo clicks are reversed. That is, halfway through the demonstration the loudspeaker that had delivered the first or source click now delivers the delayed or echo click and vice versa. In the Clifton Effect, an unexpected percept occurrs immediately after the switch, where two clicks are perceived often coming from the location of each loudspeaker. Then after 4 or 5 more click-pair presentations following the switch, a single click is again perceived and its location is now at the loudspeaker presenting the lead click, which is the opposite loudspeaker from that which produced the lead click for the first half of the click train. Most listeners tend to hear two clicks at the beginning of the click train, then fusion occurs, then after the switch two clicks are heard, and then finally fusion reoccurs but at the location of the other loudspeaker. That is, after the switch there is a temporary cessation or breakdown of the Precedence Effect; fusion and/or echo suppression stops. This breakdown occurred because of the prior exposure you had during the first half of the click train. Thus, your experience with the source and echo clicks somehow influenced your perception after the source and echo clicks were switched. Eventually however, echo suppression reoccurs and the Precedence Effect works as before. This demonstration suggests that echo processing might depend on our listening experience in the reflective spaces that we are currently in. 
 
-clifton.gif Clifton Effect
+{% include img-figure url="/MUTOR/assets/images/unit3_clifton.gif" description="Clifton Effect" %}
 (image source: http://www.parmly.luc.edu/parmly/clifton.html)
 In the Clifton demonstration the two clicks are always seperated by 12 ms and the click pairs are presented at a rate of about 3 per second.
+
+<html>
+  <head>
+    <title>clifton</title>
+  </head>
+  <body>
+    <audio controls src="/MUTOR/assets/audios/unit3_unit3_clifton.wav">
+      Your browser does not support the audio element.
+    </audio>
+  </body>
+</html>
+
 Clifton Effect Demonstration (requires stereo headphones) 
 (source: http://www.parmly.luc.edu/parmly/clifton.html)
 
@@ -439,7 +485,8 @@ So far we have discussed the auditory system's processing of sounds and its vari
 Soundtracks in movies offer one case of auditory perception enhancing visual perception. The use of sound effects and soundtracks in the film industry relies heavily on AudioVisualInteraction, and much research has shown that auditory, visual, and tactile sensations influence each other in perceptual as well as cognitive processing. In one particular study by Marilyn Boltz (2001), video clips were paired with positive, neutral, and negative soundtracks and shown to study participants. After viewing the films, participants were asked to rate how well certain adjectives described the content of the video (e.g. "What adjective best describes the man's intentions for following the womann? benevolent / malevolent") 
 Participants rated videos with positive soundtracks as being better described by positive adjectives, and videos with negative soundtracks using negative adjectives. Videos with no soundtracks were rated as relatively neutral. This study shows strong effects of musical stimuli on the perception of meaning and emotional content of visual scenes.
 
-boltz.jpg Boltz soundtrack study
+{% include img-figure url="/MUTOR/assets/images/boltz.jpg" description="Boltz soundtrack study" %}
+
 (image source & reference: http://caliber.ucpress.net/doi/pdfplus/10.1525/mp.2001.18.4.427)
 M.G. Boltz. 2001. Musical Soundtracks as a Schematic Influence on the Cognitive Processing of Filmed Events. Music Perception Summer 2001.
 
@@ -452,8 +499,15 @@ One demosntration of AudioVisualInteraction, especially of the visual capture of
 http://www.paulzerdin.com/
 
 <html>
-<object width="425" height="350"><embed src="babyvent.mpg" width="425" height="350" autoplay="false"></embed></object>
-        </html>
+  <head>
+    <title>clifton</title>
+  </head>
+  <body>
+    <video controls src="/MUTOR/assets/videos/unit3_babyvent.mpg">
+      Your browser does not support the audio element.
+    </video>
+  </body>
+</html>
   
 (video source: http://www.paulzerdin.com) 
 (see also http://video.google.com/videoplay?docid=8126344216754570223&q=ventriloquist+is%3Afree+duration%3Ashort&pr=goog-sl)
@@ -466,8 +520,15 @@ When the auditory and visual systems are uncorrelated, visual capture (such as t
 In the lab it is possible to create situations in which the visual and auditory percepts do not match. 
 
 <html>
-<embed name="McGurk_large.mov" SRC="McGurk_large.mov" width="400" height="320" autoplay="false"></html>
- 
+  <head>
+    <title>clifton</title>
+  </head>
+  <body>
+    <video controls src="/MUTOR/assets/videos/unit3_McGurk_large.mov">
+      Your browser does not support the audio element.
+    </video>
+  </body>
+</html>
 (video source: http://www.media.uio.no/personer/arntm/McGurk_english.html)
 
 A demonstration of the McGurk Effect. To experience the McGurk Effect, play this video clip in three different ways: 
@@ -478,10 +539,6 @@ The video clip consists of a video of the person saying "ga ga", dubbed with a v
 doneear "ba ba". Interestingly, in the fused condition when both looking and listening, most people report hearing "da da", which is a fusion of "ba ba" and "ga ga".
 The McGurkEffect was first report in 1976 by McGurk and MacDonald, who propose the following explanation for their finding:
 ... in a ga-lips/ba-voice representation, there is visual information for [a] and [da] and auditory information with features common to [ba] and [da]. By responding to the common information in both modalities, a subject would arrive at the unifying percept /da/. (McGurk & MacDonald, Nature, 1976).
-
-# Summary
-
-In the previous unit, we discussed sound largely in the abstract, whereas here we have seen that the environment and our auditory system both play a large role in our perception and understanding of the sonic world around us. It is not enough to say that a signal has an amplitude of 0.5—as we have seen, this will mean different things depending on the frequency. From the bottom-up, we can say that the signal has an amplitude of 0.5 and that the loudness will vary depending on the frequency due to the fact that our auditory system is more sensitive at certain frequencies than others; from the top-down, our knowledge of the origin of the sound source (what made it, where it comes from, etc.) may influence the way in which we hear the signal. This top-down processing can lead to interesting auditory illusions such as the McGurk effect, the Franssen effect, and the Clifton effect. Finally, the acoustic environment and how much reverberation that environment adds to a sound dramatically alters the way in which perceive sounds.
 
 # Links And Downloads
 
