--- a/_units/03.md
+++ b/_units/03.md
@@ -249,7 +249,7 @@ Listen to the following examples; in the first example, you will hear someone sp
     <title>Psycho1</title>
   </head>
   <body>
-    <audio controls src="unit3_Psycho1.wav">
+    <audio controls src="/MUTOR/assets/audios/unit3_Psycho1.wav">
       Your browser does not support the audio element.
     </audio>
   </body>
@@ -383,7 +383,7 @@ Children's song "Frère Jacques"
     <title>Larry</title>
   </head>
   <body>
-    <audio controls src="/MUTOR/assets/audios/unit3_frerejacques.mid">
+    <audio controls src="/MUTOR/assets/audios/unit3_Frere_Jacques.mp3">
       Your browser does not support the audio element.
     </audio>
   </body>
@@ -446,7 +446,6 @@ see also: Franssen Effect, Clifton Effect
 
 Audio engineers make use of the precedence effect in the design of concert halls. If the speakers are closer to the audience than the performer is, the audience would perceive sound from the loudspeakers rather than from the performer. To ensure that sound is perceived as coming from the performer, audio engineers often implement delay lines between the performer's microphone and the speakers, such that first wavefront reaching the audience comes directly from the performer rather than the speaker. If sounds from the speakers reach the audience after sounds directly from the performer, then the perceived sound would be localized to the performer.
 
-
 ## Franssen Effect
 
 Like the PrecedenceEffect, the FranssenEffect has to do with perceived sound sources. In a two-channel speaker system, if a tone is presented with rapid onset to one speaker, and this tone is ramped off at the same time as when another tone in the opposite speaker is ramped on and sustained, this combination of tones is perceived as just one tone coming from the first speaker (i.e. the speaker that played the onset). The effect is obtained with narrow-band sounds, and only in echoic environments.
@@ -469,7 +468,7 @@ In the Clifton demonstration the two clicks are always seperated by 12 ms and th
     <title>clifton</title>
   </head>
   <body>
-    <audio controls src="/MUTOR/assets/audios/unit3_unit3_clifton.wav">
+    <audio controls src="/MUTOR/assets/audios/unit3_clifton.wav">
       Your browser does not support the audio element.
     </audio>
   </body>
@@ -485,9 +484,10 @@ So far we have discussed the auditory system's processing of sounds and its vari
 Soundtracks in movies offer one case of auditory perception enhancing visual perception. The use of sound effects and soundtracks in the film industry relies heavily on AudioVisualInteraction, and much research has shown that auditory, visual, and tactile sensations influence each other in perceptual as well as cognitive processing. In one particular study by Marilyn Boltz (2001), video clips were paired with positive, neutral, and negative soundtracks and shown to study participants. After viewing the films, participants were asked to rate how well certain adjectives described the content of the video (e.g. "What adjective best describes the man's intentions for following the womann? benevolent / malevolent") 
 Participants rated videos with positive soundtracks as being better described by positive adjectives, and videos with negative soundtracks using negative adjectives. Videos with no soundtracks were rated as relatively neutral. This study shows strong effects of musical stimuli on the perception of meaning and emotional content of visual scenes.
 
-{% include img-figure url="/MUTOR/assets/images/boltz.jpg" description="Boltz soundtrack study" %}
+{% include img-figure url="/MUTOR/assets/images/unit3_boltz.jpg" description="Boltz soundtrack study" %}
 
 (image source & reference: http://caliber.ucpress.net/doi/pdfplus/10.1525/mp.2001.18.4.427)
+
 M.G. Boltz. 2001. Musical Soundtracks as a Schematic Influence on the Cognitive Processing of Filmed Events. Music Perception Summer 2001.
 
 In the real world, events in the visual and auditory modalities are usually correlated. For example, seeing the downward motion of a drummer is usually correlated with hearing the drum beat. In some relatively infrequent cases, however, information from the visual and auditory modalities do not match. When this mismatch occurs, the brain engages interesting processes from a Top-Down perspective to make up for these discrepancies between the senses.
@@ -500,7 +500,7 @@ http://www.paulzerdin.com/
 
 <html>
   <head>
-    <title>clifton</title>
+    <title>Ventriloquism</title>
   </head>
   <body>
     <video controls src="/MUTOR/assets/videos/unit3_babyvent.mpg">
@@ -521,7 +521,7 @@ In the lab it is possible to create situations in which the visual and auditory 
 
 <html>
   <head>
-    <title>clifton</title>
+    <title>McGurk</title>
   </head>
   <body>
     <video controls src="/MUTOR/assets/videos/unit3_McGurk_large.mov">
