--- a/_units/03.md
+++ b/_units/03.md
@@ -524,8 +524,8 @@ In the lab it is possible to create situations in which the visual and auditory 
     <title>McGurk</title>
   </head>
   <body>
-    <video controls src="/MUTOR/assets/videos/unit3_McGurk_large.mov">
-      Your browser does not support the audio element.
+    <video controls src="/MUTOR/assets/videos/unit3_McGurk_large.mp4">
+      Your browser does not support the video element.
     </video>
   </body>
 </html>
