--- a/_units/05.md
+++ b/_units/05.md
@@ -6,9 +6,10 @@
 title: Pitch, Intervals and Key Areas
 number: 5
 short_description: short description of the unit
-summary: Pitch is one of the most important attributes of music. This unit will cover the different types of pitch we may perceive in music. We start with the relationship between frequency in the physical world and pitch in the perceptual world. We continue to discuss the cases when pitch may occur in the absence of energy at the perceived frequency, and propose models which may account for this perceptual phenomenon. Different types of pitch perception will be discussed, including the qualities that makes it form transposable melodies and harmonies. Finally, we will discuss pitch spaces and tuning systems that enable the systematic use of pitch as a musical medium.
-authors: 
- - Psyche Loui and Georg Hajdu
+summary: Pitch is one of the most important attributes of music. This unit will cover the different types of pitch we may perceive in music. We start with the relationship between frequency in the physical world and pitch in the perceptual world. We continue to discuss the cases when pitch may occur in the absence of energy at the perceived frequency, and propose models which may account for this perceptual phenomenon. Different types of pitch perception will be discussed, including the qualities that makes it form transposable melodies and harmonies. Finally, we will discuss pitch spaces that enable the systematic use of pitch as a musical medium.
+authors:
+ - Georg Hajdu
+ - Psyche Loui 
 topics: [Pitch, Interval, Theory of Pitch Perception, Tonality, Key Area]
 test_questions:
  - Calculate the sizes of following intervals.  Pythagorean major third (81 / 64),  septimal minor seventh (7/4) and  undecimal augmented fourth (11 / 8). Determine how much they deviate from their equal-tempered counterparts.
@@ -29,18 +30,13 @@ mathjax: true
 
 {% include unit_preamble.md %}
 
-# Pitch
+# Introduction
 
-Spectral composition and temporal development of a sound determines pitch and timbre.
-Unambiguous pitch only for harmonic sounds.
-Ambiguity in inharmonic sounds caused by competing virtual pitches.
-{% include note author="vg" text="I have the feeling that these are more ideas to be developed than content? Maybe is just a matter of redaction? " %}
+The concept of sound frequencies was first introduced in [Unit 01](/MUTOR/units/01.html). While frequency is a physical attribute which characterizes waves of sound energy, pitch is a perceptual attribute which describes our experience of tones, whether pure (one partial) or complex (several partials). Generally, the higher the frequency of a sound, the higher the perceived pitch. As the spectral composition and temporal development of a sound determine pitch and timbre, an unambiguous pitch percept is only formed for harmonic sounds whose partials have frequencies that are multiples of the fundamental frequency (which also corresponds to the perceived pitch). Inharmonic sounds, in turn, whose partials don't follow this simple rule, have ambiguous pitch caused by competing virtual pitches.
 
 Pitch is thought of as a morphophoric, or form-bearing, medium. This means that patterns of pitch can take on a certain form (i.e. melody) which can be transposed - shifted up or down in pitch - and remain invariant in its perceptual structure. Musically, this accounts for how the same melody can be transposed into different keys and still be recognizable as the same theme.
 
 # Frequency and Pitch
-
-The concept of sound frequencies was first introduced in [Unit 01](/MUTOR/units/01.html). While frequency is a physical attribute which characterizes waves of sound energy, pitch is a perceptual attribute which describes our experience of tones. Generally, the higher the frequency of a sound, the higher the perceived pitch. 
 
 Pitch is perceived in sounds that are periodic; i.e. sounds with features which recur at regular frequencies. Aperiodic sounds are more likely to be perceived not as pitches, but as noise or transient (quickly-changing) clicks. Thus, pitch perception depends on frequencies of sounds entering the ears. 
 
@@ -54,10 +50,12 @@ Our percept of pitch is **logarithmically organized** such that an octave above 
 
 The mathematical relationship between an interval created by two pitches and their respective frequencies is given by this formula:
 
-I = 1200 log2(F1/F0) 
-  = 1200 log10(F1/F0)/log10(2) 
+\begin{equation}
+I=1200\cdotlog_2(\fraq{F_1}{F_0}) = 1200\cdotlog_10\fraq{(\fraq{F_1}{F_0})}{log_10(2)}
+\label{eq:FrequencyToPitch}
+\end{equation}
 
-Replace F1 and F0 by integer numbers and get the result by entering the formula into a browser.  
+Replace F1 and F0 by integer numbers and get the result by entering the formula into a calculator or browser.  
 
 The unit for I is cents — one cent being a 1/100th of a semitone.
 
