--- a/_units/05.md
+++ b/_units/05.md
@@ -157,13 +157,13 @@ Evidence that pitch chroma and pitch height activate different parts of the brai
 
 # The Fifth as the Generator of Tonality
 
-The fifth (3:2) occupies an outstanding position in almost all musical cultures. In contrast to so-called imperfect consonances such as thirds and sixths, deviations of the fifth are not well tolerated by listeners. It has a similarity with the octave, which is perceived as an identical sound.
+The fifth (3:2) occupies an outstanding position in almost all musical cultures. In contrast to so-called imperfect consonances such as thirds and sixths, deviations of the fifth are not well tolerated by listeners. It has a similarity to the octave whose tones are perceived as _equivalent_.
 
-The special significance of the fifth manifests itself in the fact that it appears on four different levels of music and thus indicates of the holistic, self-similar or fractal nature of (tonal) music.
+The special significance of the fifth manifests itself in the fact that it appears on four different levels of music and is thus indicative of the holistic, self-similar or fractal nature of tonal music.
 
 1. Harmonic Series
 1. Intervals of Complex tones
-1. Function: T-D
+1. Function: tonic - dominant
 1. Key Areas: C major - G major
 
 # Tonality and Probe Tone Method
