--- a/_units/05.md
+++ b/_units/05.md
@@ -46,36 +46,6 @@ Our percept of pitch is **logarithmically organized** such that an octave above 
 
 {% include img-figure url="/MUTOR/assets/images/PitchVsFrequency.jpg" description="Pitch vs. Frequency" %}
 
-# Intervals
-
-The mathematical relationship between an interval created by two pitches and their respective frequencies is given by this formula:
-
-\begin{equation}
-I=1200\cdot log_2(\frac{F_1}{F_0}) = 1200\cdot \frac{log_{10}(\frac{F_1}{F_0})}{log_{10}(2)}
-\label{eq:FrequencyToPitch}
-\end{equation}
-
-Replace F1 and F0 by integer numbers and get the result by entering the formula into a calculator or browser.  
-
-The unit for I is cents — one cent being a 1/100th of a semitone.
-
-{% include begin-table description="Some data" %}
-| Interval (Name) | Frequency ratio | Interval (Size in Cents) | Size of Tempered Interval
-| unison | 1/1 | 0 | 0 |
-| minor second | 	16/15 | 112 | 100 |
-| major second | 9/8  | 204 | 200 |
-| minor third | 6/5 | 316 | 300 |
-| major third | 5/4 | 386 | 400 |
-| just fourth | 4/3 | 498 | 500 |
-| diminished fifth | 7/5 | 583 | 600 |
-| juist fifth | 3/2 | 702 | 700 |
-| minor sixth | 8/5 | 814 | 800 |
-| major sixth | 5/3 | 884 | 900 |
-| minor seventh | 16/9 | 996 | 1000 |
-| major seventh | 15/8 | 1088 | 1100 |
-| octave | 2/1 | 1200 | 1200 |
-{% include end-table %}
-
 # Residual or Virtual Pitch
 
 The brain recognizes the fundamental pitch in harmonic and some inharmonic sounds even in the absence of lower partials. {% comment %} Prerequisite: {% endcomment %} For this you would need three adjacent partials.Periodicity remains intact in the absence of fundamental.
@@ -155,9 +125,39 @@ The so—called Tritonus paradox can be demonstrated with Shepard tones. A trito
 
 Evidence that pitch chroma and pitch height activate different parts of the brain come from Warren et al (2003) {% include note author="vg" text="‘Warren et al‘ should be a quote to our references right?" %} who showed that changes in both chroma and height activate the auditory cortex, but changes in pitch chroma activate regions anterior to the regions activated by pitch height changes. 
 
+# Intervals
+
+The mathematical relationship between an interval created by two pitches and their respective frequencies is given by this formula:
+
+\begin{equation}
+I=1200\cdot log_2(\frac{F_1}{F_0}) = 1200\cdot \frac{log_{10}(\frac{F_1}{F_0})}{log_{10}(2)}
+\label{eq:FrequencyToPitch}
+\end{equation}
+
+Replace F1 and F0 by integer numbers and get the result by entering the formula into a calculator or browser.  
+
+The unit for I is cents — one cent being a 1/100th of a semitone.
+
+{% include begin-table description="Intervals of the chromatic scale" %}
+| Interval (Name) | Frequency ratio | Interval (Size in Cents) | Size of Tempered Interval
+| unison | 1/1 | 0 | 0 |
+| minor second | 	16/15 | 112 | 100 |
+| major second | 9/8  | 204 | 200 |
+| minor third | 6/5 | 316 | 300 |
+| major third | 5/4 | 386 | 400 |
+| just fourth | 4/3 | 498 | 500 |
+| diminished fifth | 7/5 | 583 | 600 |
+| juist fifth | 3/2 | 702 | 700 |
+| minor sixth | 8/5 | 814 | 800 |
+| major sixth | 5/3 | 884 | 900 |
+| minor seventh | 16/9 | 996 | 1000 |
+| major seventh | 15/8 | 1088 | 1100 |
+| octave | 2/1 | 1200 | 1200 |
+{% include end-table %}
+
 # The Fifth as the Generator of Tonality
 
-The fifth (3:2) occupies an outstanding position in almost all musical cultures. In contrast to so-called imperfect consonances such as thirds and sixths, deviations of the fifth are not well tolerated by listeners. It has a similarity to the octave whose tones are perceived as _equivalent_.
+The fifth (3/2) occupies an outstanding position in almost all musical cultures. In contrast to so-called imperfect consonances such as thirds and sixths, deviations of the fifth are not well tolerated by listeners. It has a similarity to the octave whose tones are perceived as _equivalent_.
 
 The special significance of the fifth manifests itself in the fact that it appears on four different levels of music and is thus indicative of the holistic, self-similar or fractal nature of tonal music.
 
