--- a/_units/05.md
+++ b/_units/05.md
@@ -46,6 +46,72 @@ Our percept of pitch is **logarithmically organized** such that an octave above 
 
 {% include img-figure url="/MUTOR/assets/images/PitchVsFrequency.jpg" description="Pitch vs. Frequency" %}
 
+# Fundamental Frequency
+
+The percept of pitch generally correlates with the fundamental frequency of sound waves. The fundamental frequency is defined as the highest common factor of all sound waves from the same source, which gives rise to the pitch percept. 
+
+As an illustration of fundamental frequency and its relationship with pitch, consider four tones, each with different numbers of components, but where all the components are integer multiples of 440Hz. The perceived pitch of these four tones should be the same, although the frequencies which comprise them are different. The higher components in frequencies of n times 440Hz do not change the perceived pitch, but they do influence the percept of timbre. 
+
+The following are four tones with differing numbers of partials, but with the same fundamental frequency and thus the same perceived pitch.
+
+{% include img-figure url="/MUTOR/assets/images/unit5_440pure.png" description="Pure tone at 440Hz" %}
+<html>
+  <head>
+    <title>Pure tone at 440Hz</title>
+  </head>
+  <body>
+    <audio controls src="/MUTOR/assets/audios/unit5_440pure.wav">
+      Your browser does not support the audio element.
+    </audio>
+  </body>
+</html>
+{% include img-figure url="/MUTOR/assets/images/unit5_440x2complex.png" description="Two-tone complex with fundamental frequency of 440Hz" %}
+<html>
+  <head>
+    <title>Two-tone complex with fundamental frequency of 440Hz</title>
+  </head>
+  <body>
+    <audio controls src="/MUTOR/assets/audios/unit5_440x2complex.wav">
+      Your browser does not support the audio element.
+    </audio>
+  </body>
+</html>
+{% include img-figure url="/MUTOR/assets/images/unit5_440x3complex.png" description="Three-tone complex with F0 of 440Hz" %}
+<html>
+  <head>
+    <title>Three-tone complex with F0 of 440Hz</title>
+  </head>
+  <body>
+    <audio controls src="/MUTOR/assets/audios/unit5_440x3complex.wav">
+      Your browser does not support the audio element.
+    </audio>
+  </body>
+</html>  
+{% include img-figure url="/MUTOR/assets/images/unit5_440x4complex.png" description="Four-tone complex with F0 of 440Hz" %}
+<html>
+  <head>
+    <title>Four-tone complex with F0 of 440Hz</title>
+  </head>
+  <body>
+    <audio controls src="/MUTOR/assets/audios/unit5_440x4complex.wav">
+      Your browser does not support the audio element.
+    </audio>
+  </body>
+</html>  
+{% include img-figure url="/MUTOR/assets/images/unit5_440x3virtual.png" description="Three-tone complex with missing fundamental of 440Hz" %}
+<html>
+  <head>
+    <title>Three-tone complex with missing fundamental of 440Hz</title>
+  </head>
+  <body>
+    <audio controls src="/MUTOR/assets/audios/unit5_440x3virtual.wav">
+      Your browser does not support the audio element.
+    </audio>
+  </body>
+</html>
+  
+The fundamental frequency of a sound is also known as its periodicity pitch, and is shorthanded as F0.
+
 # Residual or Virtual Pitch
 
 The brain recognizes the fundamental pitch in harmonic and some inharmonic sounds even in the absence of lower partials. {% comment %} Prerequisite: {% endcomment %} For this you would need three adjacent partials.Periodicity remains intact in the absence of fundamental.
