--- a/_units/05.md
+++ b/_units/05.md
@@ -60,9 +60,11 @@ The following are four tones with differing numbers of partials, but with the sa
     <title>Pure tone at 440Hz</title>
   </head>
   <body>
+   <div align="center">
     <audio controls src="/MUTOR/assets/audios/unit5_440pure.wav">
       Your browser does not support the audio element.
     </audio>
+    </div>
   </body>
 </html>
 {% include img-figure url="/MUTOR/assets/images/unit5_440x2complex.png" description="Two-tone complex with fundamental frequency of 440Hz" %}
