--- a/_units/05.md
+++ b/_units/05.md
@@ -12,7 +12,7 @@ authors:
  - Psyche Loui 
 topics: [Pitch, Interval, Theory of Pitch Perception, Tonality, Key Area]
 test_questions:
- - Calculate the sizes of following intervals.  Pythagorean major third (81 / 64),  septimal minor seventh (7/4) and  undecimal augmented fourth (11 / 8). Determine how much they deviate from their equal-tempered counterparts.
+ - Calculate the sizes of following intervals.  Pythagorean major third (81/64),  septimal minor seventh (7/4) and  undecimal augmented fourth (11/8). Determine how much they deviate from their equal-tempered counterparts.
 
  - The calculation of virtual pitch was attributed to cubic difference tones  in past which, strikingly, yield similar results. Explain why the brain will most likely still use a different method and give an example where difference tones and virtual pitch differ.
  
@@ -64,7 +64,7 @@ The following are four tones with differing numbers of partials, but with the sa
     <audio controls src="/MUTOR/assets/audios/unit5_440pure.wav">
       Your browser does not support the audio element.
     </audio>
-    </div>
+   </div>
   </body>
 </html>
 {% include img-figure url="/MUTOR/assets/images/unit5_440x2complex.png" description="Two-tone complex with fundamental frequency of 440Hz" %}
@@ -73,9 +73,11 @@ The following are four tones with differing numbers of partials, but with the sa
     <title>Two-tone complex with fundamental frequency of 440Hz</title>
   </head>
   <body>
+   <div align="center">
     <audio controls src="/MUTOR/assets/audios/unit5_440x2complex.wav">
       Your browser does not support the audio element.
     </audio>
+   </div>
   </body>
 </html>
 {% include img-figure url="/MUTOR/assets/images/unit5_440x3complex.png" description="Three-tone complex with F0 of 440Hz" %}
@@ -84,9 +86,11 @@ The following are four tones with differing numbers of partials, but with the sa
     <title>Three-tone complex with F0 of 440Hz</title>
   </head>
   <body>
+   <div align="center">
     <audio controls src="/MUTOR/assets/audios/unit5_440x3complex.wav">
       Your browser does not support the audio element.
     </audio>
+   </div>
   </body>
 </html>  
 {% include img-figure url="/MUTOR/assets/images/unit5_440x4complex.png" description="Four-tone complex with F0 of 440Hz" %}
@@ -95,9 +99,11 @@ The following are four tones with differing numbers of partials, but with the sa
     <title>Four-tone complex with F0 of 440Hz</title>
   </head>
   <body>
+   <div align="center">
     <audio controls src="/MUTOR/assets/audios/unit5_440x4complex.wav">
       Your browser does not support the audio element.
     </audio>
+   </div>
   </body>
 </html>  
 {% include img-figure url="/MUTOR/assets/images/unit5_440x3virtual.png" description="Three-tone complex with missing fundamental of 440Hz" %}
@@ -106,34 +112,64 @@ The following are four tones with differing numbers of partials, but with the sa
     <title>Three-tone complex with missing fundamental of 440Hz</title>
   </head>
   <body>
+   <div align="center">
     <audio controls src="/MUTOR/assets/audios/unit5_440x3virtual.wav">
       Your browser does not support the audio element.
     </audio>
+   </div>
   </body>
 </html>
   
 The fundamental frequency of a sound is also known as its periodicity pitch, and is shorthanded as F0.
 
-# Residual or Virtual Pitch
+# Virtual Pitch
 
-The brain recognizes the fundamental pitch in harmonic and some inharmonic sounds even in the absence of lower partials. {% comment %} Prerequisite: {% endcomment %} For this you would need three adjacent partials.Periodicity remains intact in the absence of fundamental.
-
-However, this does not explain the perception of strike tones in bells. Therefore, Terhardt has formulated the theory of pattern recognition (comparable to subjective contour in vision, see Kanizsa triangle).
-
-Sometimes, pitch is perceived at a fundamental frequency even when energy is nonexistent at the frequency of the fundamental. This is known as virtual pitch. Virtual pitch, also known as the missing fundamental, is a classic phenomenon in audition where sound is perceived at a frequency where no energy is present. When energy from harmonic components other than the fundamental is present at integer multiples of the fundamental frequency, the brain is able to infer a virtual pitch at the missing fundamental. Mechanisms that the brain may be using to infer virtual pitch is still an issue of debate, although various [[models of pitch perception|PitchPerceptionModels]] have been proposed to explain this perceptual phenomenon.
+Sometimes, pitch is perceived at a fundamental frequency even when energy is nonexistent at the frequency of the fundamental. This is known as virtual pitch. Virtual pitch, also known as the missing fundamental, is a classic phenomenon in audition where sound is perceived at a frequency where no energy is present. When energy from harmonic components other than the fundamental is present at integer multiples of the fundamental frequency, the brain is able to infer a virtual pitch at the missing fundamental. Mechanisms that the brain may be using to infer virtual pitch is still an issue of debate, although various models of pitch perception (see below) have been proposed to explain this perceptual phenomenon.
 Virtual pitch is only perceived if the missing fundamental frequency lies within the existence region for pitch, which is approximately the frequency range of 30Hz to 3.2 kHz (Pressnitzer et al, 2001).
 
+Virtual pitch demonstrations (from ASA demonstration CD): 
+Spectral and virtual pitch: you will hear a tune of Westminster chimes presented in virtual pitch, due to the configuration of spectral components harmonically related to the missing fundamental. The spectral and virtual pitches will each be masked in the second and third clips. 
 
-Virtual pitch audio demonstrations (from ASA demonstration CD): 
-Spectral and virtual pitch: you will hear a tune of Westminster chimes presented in virtual pitch, due to the configuration of spectral components harmonically related to the missing fundamental. The spectral and virtual pitches will each be masked in the second and third clips.
+The video features autocorrelograms of the auditory signal (see below for an explanation).
 
-{% include note author="vg" text="the links included in 05.md file are not leading to the audios. Should we include the audios directly on the file?"%}
-{% comment %}
-[[1|http://cnmat.berkeley.edu/Music108/mp3s/asacd/40%20Masking%20Spectral%20And%20Virtual%20Pitc.mp3]]   
+  <head>
+    <title>Masking Spectra And Virtual Pitch</title>
+  </head>
+  <body>
+   <div align="center">
+    <video controls src="/MUTOR/assets/audios/unit5_40_Masking_Spectral_And_Virtual_Pitch.mp4">
+      Your browser does not support the video element.
+    </video>
+   </div>
+  </body>
+</html>
+  <head>
+    <title>Masking Spectra And Virtual Pitch</title>
+  </head>
+  <body>
+   <div align="center">
+    <video controls src="/MUTOR/assets/audios/unit5_41_Masking_Spectral_And_Virtual_Pitch.mp4">
+      Your browser does not support the video element.
+    </video>
+   </div>
+  </body>
+</html>
+  <head>
+    <title>Masking Spectra And Virtual Pitch</title>
+  </head>
+  <body>
+   <div align="center">
+    <video controls src="/MUTOR/assets/audios/unit5_42_Masking_Spectral_And_Virtual_Pitch.mp4">
+      Your browser does not support the video element.
+    </video>
+   </div>
+  </body>
+</html>
 
-[[2|http://cnmat.berkeley.edu/Music108/mp3s/asacd/41%20Masking%20Spectral%20And%20Virtual%20Pitc.mp3]]     
+The brain recognizes the fundamental pitch in harmonic and some inharmonic sounds even in the absence of lower partials. {% comment %} Prerequisite: {% endcomment %} For this you would need three adjacent partials. Periodicity remains intact in the absence of fundamental.
 
-[[3|http://cnmat.berkeley.edu/Music108/mp3s/asacd/42%20Masking%20Spectral%20And%20Virtual%20Pitc.mp3]] {% endcomment %}
+However, this does not explain the perception of strike notes in bells. Therefore, Terhardt has formulated the theory of pattern recognition (comparable to subjective contour in vision, see Kanizsa triangle).
+
 
 # Pitch Perception Models
 
